--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,10 @@ body {
     font: 15px/1.5 Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
+    /* Add some padding to the body to prevent content from being hidden behind the fixed navbar */
+
+    padding-top: 115px;
 }
 
 /* Global */
@@ -16,6 +19,16 @@ body {
     margin: auto;  /* Moves it to the middle */
     overflow: hidden;
 }
+
+#main-heading {
+    margin-top: 80px;
+    text-align: center;
+}
+
+#spacer-top {
+    margin-top: 80px;
+}
+
 
 ul {
     margin: 0;
@@ -33,7 +46,7 @@ ul {
 
 .dark {
     padding: 15px;
-    background: #35424a;
+    background: #2a2c2e;
     color: #ffffff;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -41,15 +54,29 @@ ul {
 
 /* Header */
 header {
-    background-color: #34424a;
-    color: #ffffff;
+    /* background-position-y: 100px; */
+    /* back-ground-position-y: center; */
+
+    background-color: #ffffff;
+    /* color: #ffffff; */
     padding-top: 30px;
-    min-height: 70px;
-    border-bottom: #e8491d 3px solid;
+    /* min-height: 70px; */
+    padding-bottom: 20px;
+    border-bottom: #ffffff 3px solid;
+    position: fixed; /* Set the navbar to a fixed position */
+    top: 0; /* Align the navbar to the top of the viewport Due to padding-top added in body*/
+    width: 100%; /* Make the navbar span the full width of the viewport */
+    z-index: 1000; /* Set high z-index to ensure the navbar appears on top of other content */
 }
 
+header nav {
+    float: right;
+    margin-top: 10px;
+}
+
+
 header a {
-    color: #ffffff;
+    color: #000000;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px; 
@@ -80,36 +107,39 @@ header .highlight, header .current a {
 }
 
 header a:hover {
-    color: #cccccc;
-    font-weight: bold;
+    /* color: #ffffff; */
+    /* font-weight: bold; */
+    text-decoration: underline;
 }
 
 /* Showcase */
 #showcase {
-    min-height: 400px;
-
+    min-height: 700px;
     /* background-image, background-repeat x-axis (of picture) y-axis (of picture, below y axis has been moved up 400 pixels)*/
-    background: url(../img/showcase.jpg) no-repeat -80px -300px;
-    text-align: center;
-    color: #ffffff;
+    background-image: url(../img/showcase.jpg);
+    background-size: cover;  /* Ensures background image covers the entire showcase. */
+    border-bottom: #2a2c2e 2px solid;
+    /* border-top: #2a2c2e 2px solid; */
+    /* text-align: center;
+    color: #ffffff; */
 }
 
-#showcase h1 {
+/* #showcase h1 {
     margin-top: 100px;
     font-size: 55px;
     margin-bottom: 10px;
-}
+} */
 
-#showcase p {
+/* #showcase p {
     font-size: 20px;
-}
+} */
 
 
 /* newsletter */
 #newsletter {
     padding: 15px;
     color: #ffffff;
-    background: #35424a;
+    background: #2a2c2e;
 }
 
 #newsletter h1 {
@@ -166,14 +196,14 @@ article#main-col {
 ul#services li {
     list-style: none;
     padding: 20px;
-    border: #cccccc solid 1px;
+    border: #2a2c2e solid 3px;
     margin-bottom: 5px;
-    background-color: #e6e6e6;
+    background-color: #ffffff;
 }
 
 footer {
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 50px;
     color: #ffffff;
     background-color: #e8491d;
     text-align: center;
